[package]
name = "montey"
version = "0.0.1"
authors = ["Julia Tatz <tatz.j@northeastern.edu>"]
edition = "2018"

[[bin]]
name = "kernel"
path = "src/kernel.rs"

[dependencies]
derive_more = "0.99"
num-traits = { version = "0.2", default-features = false }
rand = { version = "0.7", default-features = false }
rand_xoshiro = { version = "0.4", default-features = false }

[target.'cfg(target_arch="nvptx64")'.dependencies]
nvptx-sys = { git = "https://github.com/jdtatz/nvptx-sys.git", features = ["panic", "fast-math"] }

[dev-dependencies]
libm = "0.2"
approx = "0.3"
statrs = "0.13"
