[package]
name = "montey"
version = "0.0.2"
authors = ["Julia Tatz <tatz.j@northeastern.edu>"]
edition = "2018"
resolver = "2"

[[bin]]
name = "kernel"
path = "src/kernel.rs"

[dependencies]
derive_more = "0.99"
num-traits = { version = "0.2", default-features = false }
rand = { version = "0.8", default-features = false }
rand_xoshiro = { version = "0.6", default-features = false }

[target.'cfg(target_arch="nvptx64")'.dependencies]
nvptx-sys = { git = "https://github.com/jdtatz/nvptx-sys.git", features = ["panic", "fast-math"] }

[target.'cfg(not(target_arch="nvptx64"))'.dependencies]
libm = "0.2"

[dev-dependencies]
approx = "0.4"
statrs = "0.13"
ndarray = "0.14"
ndarray-npy = "0.7"

[profile.dev]
opt-level = 2

[profile.release]
opt-level=3
lto=true

[profile.release.build-override]
opt-level=0
